Añadiendo funcionalidad de registro y su formulario

--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -32,6 +32,8 @@
 		</nav>
 		<h1 class="text-success" th:text="${titulo}"></h1>
 		<hr class="border border-primary">
+		
+		<a th:href="@{/form}">Crear Cliente</a>
 		<table class="table table-striped">
 
 			<thead>
