--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -10,53 +10,69 @@
 </head>
 <body>
 	<div class="container">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">Spring-Boot</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#navbarNav" aria-controls="navbarNav"
-			aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
-						<span class="sr-only">(current)</span>
-				</a></li>
-				<li class="nav-item"><a class="nav-link" th:href="@{/listar}">Clientes</a>
-				</li>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand" href="#">Spring-Boot</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarNav" aria-controls="navbarNav"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item active"><a class="nav-link" href="#">Home
+							<span class="sr-only">(current)</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/listar}">Clientes</a>
+					</li>
 
-			</ul>
-		</div>
-	</nav>
+				</ul>
+			</div>
+		</nav>
 
-	<h1 class="text success" th:text="${titulo}"></h1>
-	<hr class="border border-primary">
-
-
-	<form th:action="@{/form}" th:object="${cliente}" method="post">
-		<table>
+		<h1 class="text success" th:text="${titulo}"></h1>
+		<hr class="border border-primary">
 
 
-			<tr>
-				<td>Nombre</td>
-				<td><input class="form-control" type="text" th:field="*{nombre}" /></td>
-			</tr>
-			<tr>
-				<td>Apellido</td>
-				<td><input class="form-control" type="text" th:field="*{apellido}" /></td>
-			</tr>
-			<tr>
-				<td>Email</td>
-				<td><input class="form-control" type="email" th:field="*{email}" /></td>
-			</tr>
-			<tr>
-				<td><input class="btn btn-primary" type="submit" value="Crear Cliente" /></td>
-			</tr>
+		<form th:action="@{/form}" th:object="${cliente}" method="post">
+			<div class="form-group row">
 
-		</table>
-		<input type="hidden" th:field="*{id}">
-	</form>
-</div>
+				<label class="col-sm-2 col-form-label">Nombre</label>
+				<div class="col-sm-6">
+					<input class="form-control" type="text" th:field="*{nombre}" />
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label">Apellido</label>
+				<div class="col-sm-6">
+					<input class="form-control" type="text" th:field="*{apellido}" />
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label">Email</label>
+				<div class="col-sm-6">
+					<input class="form-control" type="email" th:field="*{email}" />
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label">Fecha</label>
+				<div class="col-sm-6">
+					<input class="form-control" type="text" th:field="*{createAt}" />
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<div class="col-sm-6">
+					<input class="btn btn-primary" type="submit" value="Crear Cliente" />
+				</div>
+			</div>
+
+
+			<input type="hidden" th:field="*{id}">
+		</form>
+	</div>
 
 </body>
 </html>
