--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -38,28 +38,32 @@
 
 				<label class="col-sm-2 col-form-label">Nombre</label>
 				<div class="col-sm-6">
-					<input class="form-control" type="text" th:field="*{nombre}" />
+					<input class="form-control" th:errorclass="'form-control alert-danger'" type="text" th:field="*{nombre}" />
+					<small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
 				</div>
 			</div>
 
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Apellido</label>
 				<div class="col-sm-6">
-					<input class="form-control" type="text" th:field="*{apellido}" />
+					<input class="form-control" th:errorclass="'form-control alert-danger'" type="text" th:field="*{apellido}" />
+					<small class="form-text text-danger" th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
 				</div>
 			</div>
 
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Email</label>
 				<div class="col-sm-6">
-					<input class="form-control" type="email" th:field="*{email}" />
+					<input class="form-control" th:errorclass="'form-control alert-danger'" type="email" th:field="*{email}" />
+					<small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
 				</div>
 			</div>
 
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Fecha</label>
 				<div class="col-sm-6">
-					<input class="form-control" type="text" th:field="*{createAt}" />
+					<input class="form-control" th:errorclass="'form-control alert-danger'" type="text" th:field="*{createAt}" />
+					<small class="form-text text-danger" th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
 				</div>
 			</div>
 
