--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -32,38 +32,51 @@
 		<h1 class="text success" th:text="${titulo}"></h1>
 		<hr class="border border-primary">
 
+		<div th:object="${cliente}" th:remove="tag">
+			<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+				<li th:each="error:  ${#fields.errors('*')}" th:text="${error}"></li>
+			</ul>
+		</div>
 
 		<form th:action="@{/form}" th:object="${cliente}" method="post">
 			<div class="form-group row">
 
 				<label class="col-sm-2 col-form-label">Nombre</label>
 				<div class="col-sm-6">
-					<input class="form-control" th:errorclass="'form-control alert-danger'" type="text" th:field="*{nombre}" />
-					<small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
+					<input class="form-control"
+						th:errorclass="'form-control alert-danger'" type="text"
+						th:field="*{nombre}" /> <small class="form-text text-danger"
+						th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></small>
 				</div>
 			</div>
 
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Apellido</label>
 				<div class="col-sm-6">
-					<input class="form-control" th:errorclass="'form-control alert-danger'" type="text" th:field="*{apellido}" />
-					<small class="form-text text-danger" th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
+					<input class="form-control"
+						th:errorclass="'form-control alert-danger'" type="text"
+						th:field="*{apellido}" /> <small class="form-text text-danger"
+						th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></small>
 				</div>
 			</div>
 
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Email</label>
 				<div class="col-sm-6">
-					<input class="form-control" th:errorclass="'form-control alert-danger'" type="email" th:field="*{email}" />
-					<small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
+					<input class="form-control"
+						th:errorclass="'form-control alert-danger'" type="text"
+						th:field="*{email}" /> <small class="form-text text-danger"
+						th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
 				</div>
 			</div>
 
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label">Fecha</label>
 				<div class="col-sm-6">
-					<input class="form-control" th:errorclass="'form-control alert-danger'" type="text" th:field="*{createAt}" />
-					<small class="form-text text-danger" th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
+					<input class="form-control"
+						th:errorclass="'form-control alert-danger'" type="text"
+						th:field="*{createAt}" /> <small class="form-text text-danger"
+						th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
 				</div>
 			</div>
 
