Añadiendo funcionalidad Eliminar

--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -55,6 +55,7 @@
 					<td th:text="${clientes.email}"></td>
 					<td th:text="${clientes.createAt}"></td>
 				    <td><a class="btn btn-primary" th:href="@{/form/} + ${clientes.id}">Editar</a></td>
+				     <td><a class="btn btn-danger" th:href="@{/eliminar/} + ${clientes.id}" onclick="return confirm('Estas seguro ?')">Eliminar</a></td>
 
 
 				</tr>
