--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -1,79 +1,59 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<title th:text="${titulo}"></title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
+<head th:replace="layout/layout :: head">
 
 </head>
 <body>
-	<div class="container">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">Spring-Boot</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarNav" aria-controls="navbarNav"
-				aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item active"><a class="nav-link" href="#">Home
-							<span class="sr-only">(current)</span>
-					</a>
-					</li>
-					<li class="nav-item"><a class="nav-link" th:href="@{/listar}">Clientes</a>
-					</li>
-					
-				</ul>
+
+	<header th:replace="layout/layout :: header"></header>
+
+	<div class="container py-4">
+
+		<div class="card bg-light">
+			<div class="card-header" th:text="${titulo}"></div>
+			<div class="card-body">
+
+				<hr class="border border-primary">
+
+				<h4 class="card-title">
+					<a class="btn btn-primary btn-xs" th:href="@{/form}">Crear
+						Cliente</a>
+				</h4>
+				<table class="table table-striped">
+
+					<thead>
+						<tr class="">
+							<th>Id</th>
+							<th>Nombre</th>
+							<th>Apellido</th>
+							<th>Email</th>
+							<th>Fecha</th>
+							<th>Editar</th>
+							<th>Eliminar</th>
+
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="clientes: ${clientes}">
+							<td th:text="${clientes.id}"></td>
+							<td th:text="${clientes.nombre}"></td>
+							<td th:text="${clientes.apellido}"></td>
+							<td th:text="${clientes.email}"></td>
+							<td th:text="${clientes.createAt}"></td>
+							<td><a class="btn btn-primary"
+								th:href="@{/form/} + ${clientes.id}">Editar</a></td>
+							<td><a class="btn btn-danger"
+								th:href="@{/eliminar/} + ${clientes.id}"
+								onclick="return confirm('Estas seguro ?')">Eliminar</a></td>
+
+
+						</tr>
+					</tbody>
+				</table>
 			</div>
-		</nav>
-		<h1 class="text-success" th:text="${titulo}"></h1>
-		<hr class="border border-primary">
-		
-		<p><a class="btn btn-primary btn-xs" th:href="@{/form}">Crear Cliente</a></p>
-		<table class="table table-striped">
-
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>Nombre</th>
-					<th>Apellido</th>
-					<th>Email</th>
-					<th>Fecha</th>
-					<th>Editar</th>
-					<th>Eliminar</th>
-
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="clientes: ${clientes}">
-					<td th:text="${clientes.id}"></td>
-					<td th:text="${clientes.nombre}"></td>
-					<td th:text="${clientes.apellido}"></td>
-					<td th:text="${clientes.email}"></td>
-					<td th:text="${clientes.createAt}"></td>
-				    <td><a class="btn btn-primary" th:href="@{/form/} + ${clientes.id}">Editar</a></td>
-				    <td><a class="btn btn-danger" th:href="@{/eliminar/} + ${clientes.id}" onclick="return confirm('Estas seguro ?')">Eliminar</a></td>
-
-
-				</tr>
-			</tbody>
-		</table>
+		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-		crossorigin="anonymous"></script>
+	<footer th:replace="layout/layout :: footer"></footer>
 
 </body>
 </html>
