--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -28,7 +28,11 @@
 				</ul>
 			</div>
 		</nav>
-
+	
+	<div th:if="${success != null}" class="alert alert-success" th:text="${success}"></div>
+	<div th:if="${error != null}" class="alert alert-danger" th:text="${error}"></div>
+	<div th:if="${warning != null}" class="alert alert-warning" th:text="${warning}"></div>
+	<div th:if="${info != null}" class="alert alert-info" th:text="${info}"></div>
 	</header>
 	<div class="container"></div>
 
