--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -49,7 +49,11 @@
 
 						</tr>
 					</tbody>
+					
+					
 				</table>
+				
+				<nav th:replace="paginador :: paginador"></nav>
 			</div>
 		</div>
 	</div>
