--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -16,7 +16,8 @@
 					</ul>
 				</div>
 
-				<form th:action="@{/form}" th:object="${cliente}" method="post">
+				<form th:action="@{/form}" th:object="${cliente}" method="post"
+					enctype="multipart/form-data">
 					<div class="form-group row">
 
 						<label class="col-sm-2 col-form-label">Nombre</label>
@@ -56,6 +57,15 @@
 								th:field="*{createAt}" /> <small class="form-text text-danger"
 								th:if="${#fields.hasErrors('createAt')}" th:errors="*{createAt}"></small>
 						</div>
+					</div>
+
+					<div class="form-group row">
+						<label for="file" class="col-sm-2 col-form-label">Foto</label>
+						<div class="col-sm-6">
+							<input type="file" name="file" class="form-control" />
+
+						</div>
+
 					</div>
 
 					<div class="form-group row">
