Creando form de factura y FacturaController con el metodo crear

--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -12,7 +12,7 @@
 		<div class="card bg-light">
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
-
+			<h4><a class="btn btn-primary btn-xs" th:text="'crear factura'" th:href="@{'/factura/form/'+ ${cliente.id}}"></a></h4>
 
 				<img th:if="${#strings.length(cliente.foto)>0}"
 					class="img-thumbnail rounded float-left" style="max-width: 25%"
