--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -28,6 +28,7 @@
 							<th>Apellido</th>
 							<th>Email</th>
 							<th>Fecha</th>
+							<th>Crear Factura</th>
 							<th>Editar</th>
 							<th>Eliminar</th>
 
@@ -40,6 +41,7 @@
 							<td th:text="${clientes.apellido}"></td>
 							<td th:text="${clientes.email}"></td>
 							<td th:text="${clientes.createAt}"></td>
+							<td ><a class="btn btn-success btn-xs" th:text="'crear factura'" th:href="@{'/factura/form/'+ ${clientes.id}}"></a></td>
 							<td><a class="btn btn-primary"
 								th:href="@{/form/} + ${clientes.id}">Editar</a></td>
 							<td><a class="btn btn-danger"
