--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -3,8 +3,8 @@
 <head th:fragment="head">
 <meta charset="UTF-8" />
 <title th:text="'Spring Boot: MVC + Thymeleaf + Data Jpa - '+${titulo}"></title>
-<link rel="stylesheet" th:href="@{/css/css.css}"
-	>
+<link rel="stylesheet" th:href="@{/css/css.css}">
+<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}">
 
 </head>
 <body>
@@ -28,33 +28,33 @@
 				</ul>
 			</div>
 		</nav>
-	
-	<div th:if="${success != null}" class="alert alert-success" th:text="${success}"></div>
-	<div th:if="${error != null}" class="alert alert-danger" th:text="${error}"></div>
-	<div th:if="${warning != null}" class="alert alert-warning" th:text="${warning}"></div>
-	<div th:if="${info != null}" class="alert alert-info" th:text="${info}"></div>
+
+		<div th:if="${success != null}" class="alert alert-success"
+			th:text="${success}"></div>
+		<div th:if="${error != null}" class="alert alert-danger"
+			th:text="${error}"></div>
+		<div th:if="${warning != null}" class="alert alert-warning"
+			th:text="${warning}"></div>
+		<div th:if="${info != null}" class="alert alert-info"
+			th:text="${info}"></div>
 	</header>
 	<div class="container"></div>
 
-	<footer th:fragment="footer" class="container"> 
-	
-	<hr/>
-	<img width="100" height="100" alt="Spring logo" th:src="@{/img/logo.jpg}" />
-	<p>
-	Powered by <a href="https://projects.spring.io/spring-boot">Spring Boot</a>
-	y <a href="http://www.thymeleaf.org">Thymeleaf</a>.
-	</p>
-	<p>Este Proyecto fue desarrollado en IDE Eclipse + Spring Plugins</p>
-	
-	<script
-		th:src="@{/js/jquery-3.3.1.slim.min.js}"
-		></script>
-	<script
-		th:src="@{/js/popper.min.js}"
-		></script>
-	<script
-		th:src="@{/js/bootstrap.min.js}"
-		></script>
-		</footer>
+	<footer th:fragment="footer" class="container">
+
+		<hr />
+		<img width="100" height="100" alt="Spring logo"
+			th:src="@{/img/logo.jpg}" />
+		<p>
+			Powered by <a href="https://projects.spring.io/spring-boot">Spring
+				Boot</a> y <a href="http://www.thymeleaf.org">Thymeleaf</a>.
+		</p>
+		<p>Este Proyecto fue desarrollado en IDE Eclipse + Spring Plugins</p>
+
+		<script th:src="@{/js/jquery-3.3.1.slim.min.js}"></script>
+		<script th:src="@{/js/popper.min.js}"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/jquery-ui.min.js}"></script>
+	</footer>
 </body>
 </html>
