--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -3,8 +3,9 @@
 <head th:fragment="head">
 <meta charset="UTF-8" />
 <title th:text="'Spring Boot: MVC + Thymeleaf + Data Jpa - '+${titulo}"></title>
-<link rel="stylesheet" th:href="@{/css/css.css}">
-<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}">
+
+<link rel="stylesheet" th:href="@{/css/css.css}"/>
+<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}"/>
 
 </head>
 <body>
@@ -51,10 +52,13 @@
 		</p>
 		<p>Este Proyecto fue desarrollado en IDE Eclipse + Spring Plugins</p>
 
-		<script th:src="@{/js/jquery-3.3.1.slim.min.js}"></script>
-		<script th:src="@{/js/popper.min.js}"></script>
+		
+	     <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
+		 <script th:src="@{/js/popper.min.js}"></script>
 		<script th:src="@{/js/bootstrap.min.js}"></script>
 		<script th:src="@{/js/jquery-ui.min.js}"></script>
+		
 	</footer>
 </body>
+
 </html>
