Creando plantilla fragment para mostrar productos selecionados y calculando PxC

--- a/src/main/resources/templates/factura/js/autocomplete-productos.html
+++ b/src/main/resources/templates/factura/js/autocomplete-productos.html
@@ -28,15 +28,34 @@ $("#buscar_producto").autocomplete({
 
 	},
 	select: function(event, ui){
-		$("#buscar_producto").val(ui.item.label);
-	
+		//$("#buscar_producto").val(ui.item.label);
+		var linea=$("#plantillaItemsFactura").html();
+		linea = linea.replace(/{ID}/g, ui.item.value)
+		linea = linea.replace(/{NOMBRE}/g, ui.item.label)
+		linea = linea.replace(/{PRECIO}/g, ui.item.precio)
+		
+		$("#cargarItemsProductos tbody").append(linea);
+		itemsHelper.calcularImporte(ui.item.value,ui.item.precio, 1)
+		
 		return false;
-	}
+	},
+	focus: function(event, ui){
+    event.preventDefault();
+    $('input[name="buscar_producto"]').val(ui.item.label);
+},
 
 });
 
 }
 );
+
+	var itemsHelper = {
+	calcularImporte: function(id , precio, cantidad){
+		$("#total_importe_"+ id).html(parseInt(precio)*parseInt (cantidad));
+	
+	}
+	
+	}
 
 </script>
 </body>
