--- a/src/main/resources/templates/factura/form.html
+++ b/src/main/resources/templates/factura/form.html
@@ -48,6 +48,22 @@
 							<input type="text" name="buscar_producto" id="buscar_producto" class="form-control" />
 						</div>
 					</div>
+					
+					<table th:replace="factura/plantillaItems :: itemsFactura"></table>
+					
+					<table id="cargarItemsProductos" class="table table-small table-striped table-hover">
+					<thead>
+					<tr>
+					<th>Nombre</th>
+					<th>Precio</th>
+					<th>Cantidad</th>
+					<th>Total</th>
+					</tr>
+					</thead>
+					<tbody>
+					
+					</tbody>
+					</table>
 
 					<div class="form-group row">
 						<div class="col-sm-6">
