--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -37,6 +37,8 @@
 							<th>Descripcion</th>
 							<th>Fecha</th>
 							<th>Total</th>
+							<th>Ver</th>
+							<th>Eliminar</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -46,6 +48,8 @@
 							<td th:text="${factura.descripcion}"></td>
 							<td th:text="${factura.createAt}"></td>
 							<td th:text="${factura.total}"></td>
+							<td><a th:href="@{'/factura/ver/'+ ${factura.id}}" th:text="'Detalle'" class="btn btn-primary btn-xs"></a> </td>
+							<td><a th:href="@{'/factura/eliminar/'+ ${factura.id}}" th:text="'Eliminar'" class="btn btn-danger btn-xs" onclick="return confirm('¿Estas Seguro de Eliminar la Factura?');"></a> </td>
 
 						</tr>
 
