--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thylemeaf.org/extras/spring-security">
 <head th:fragment="head">
 <meta charset="UTF-8" />
 <title th:text="'Spring Boot: MVC + Thymeleaf + Data Jpa - '+${titulo}"></title>
 
-<link rel="stylesheet" th:href="@{/css/css.css}"/>
-<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}"/>
+<link rel="stylesheet" th:href="@{/css/css.css}" />
+<link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}" />
 
 </head>
 <body>
@@ -27,7 +28,28 @@
 					</li>
 
 				</ul>
+
+
 			</div>
+			<ul class="navbar-nav navbar-right">
+				<li><a sec:authorize="!isAuthenticated()"
+					class="btn btn-outline-primary" th:href="@{/login}">Iniciar
+						Sesion</a></li>
+				<li sec:authorize="isAuthenticated()" class="dropdown"><a
+					class="btn btn-outline-primary dropdown-toggle" href="#"
+					role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
+					aria-expanded="false"><span sec:authentication="name"></span></a>
+
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+						<form id="logoutForm" th:action="@{/logout}" method="post">
+							<button class="dropdown-item" onclick="document.getElementById('logoutForm').submit();"
+								type="submit">Cerrar Sesion</button>
+
+						</form>
+
+					</div></li>
+
+			</ul>
 		</nav>
 
 		<div th:if="${success != null}" class="alert alert-success"
@@ -46,18 +68,25 @@
 		<hr />
 		<img width="100" height="100" alt="Spring logo"
 			th:src="@{/img/logo.jpg}" />
+
+		<p sec:authorize="isAuthenticated()">
+			Usuario Logeado: <span sec:authentication="name"></span> | Roles: <span
+				sec:authentication="principal.authorities"></span>
+		</p>
 		<p>
 			Powered by <a href="https://projects.spring.io/spring-boot">Spring
 				Boot</a> y <a href="http://www.thymeleaf.org">Thymeleaf</a>.
 		</p>
 		<p>Este Proyecto fue desarrollado en IDE Eclipse + Spring Plugins</p>
 
-		
-	     <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
-		 <script th:src="@{/js/popper.min.js}"></script>
+
+		<script th:src="@{/js/jquery-3.2.1.min.js}"></script>
+		<!-- <script th:src="@{/js/popper.min.js}"></script> -->
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 		<script th:src="@{/js/bootstrap.min.js}"></script>
 		<script th:src="@{/js/jquery-ui.min.js}"></script>
-		
+
 	</footer>
 </body>
 
