--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -42,7 +42,8 @@
 
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 						<form id="logoutForm" th:action="@{/logout}" method="post">
-							<button class="dropdown-item" onclick="document.getElementById('logoutForm').submit();"
+							<button class="dropdown-item"
+								onclick="document.getElementById('logoutForm').submit();"
 								type="submit">Cerrar Sesion</button>
 
 						</form>
@@ -50,6 +51,21 @@
 					</div></li>
 
 			</ul>
+			<ul class="navbar-nav navbar-right mx-4">
+				<li class="nav-item mx-2"><a class="btn btn-outline-success"
+					href="?lang=es_ES">ES</a></li>
+			</ul>
+
+			<ul class="navbar-nav navbar-right mx-4">
+				<li class="nav-item mx-2"><a class="btn btn-outline-success"
+					href="?lang=en_US">EN</a></li>
+			</ul>
+
+			<ul class="navbar-nav navbar-right mx-4">
+				<li class="nav-item mx-2"><a class="btn btn-outline-success"
+					href="?lang=de_DE">DE</a></li>
+			</ul>
+
 		</nav>
 
 		<div th:if="${success != null}" class="alert alert-success"
@@ -82,8 +98,14 @@
 
 		<script th:src="@{/js/jquery-3.2.1.min.js}"></script>
 		<!-- <script th:src="@{/js/popper.min.js}"></script> -->
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+			integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+			crossorigin="anonymous"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+			integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+			crossorigin="anonymous"></script>
 		<script th:src="@{/js/bootstrap.min.js}"></script>
 		<script th:src="@{/js/jquery-ui.min.js}"></script>
 
