--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -53,17 +53,17 @@
 			</ul>
 			<ul class="navbar-nav navbar-right mx-4">
 				<li class="nav-item mx-2"><a class="btn btn-outline-success"
-					href="?lang=es_ES">ES</a></li>
+					th:href="@{/locale(lang=es_ES)}">ES</a></li>
 			</ul>
 
 			<ul class="navbar-nav navbar-right mx-4">
 				<li class="nav-item mx-2"><a class="btn btn-outline-success"
-					href="?lang=en_US">EN</a></li>
+					th:href="@{/locale(lang=en_US)}">EN</a></li>
 			</ul>
 
 			<ul class="navbar-nav navbar-right mx-4">
 				<li class="nav-item mx-2"><a class="btn btn-outline-success"
-					href="?lang=de_DE">DE</a></li>
+					th:href="@{/locale(lang=de_DE)}">DE</a></li>
 			</ul>
 
 		</nav>
