--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -64,6 +64,23 @@
 			<ul class="navbar-nav navbar-right mx-4">
 				<li class="nav-item mx-2"><a class="btn btn-outline-success"
 					th:href="@{/locale(lang=de_DE)}">DE</a></li>
+
+				<li class="nav-item dropdown how"><a
+					class="btn btn-outline-primary dropdown-toggle" href="#"
+					role="button" id="dropdownLanguage" data-bs-toggle="dropdown"
+					aria-expanded="false"><span th:text="#{text.locale.language}"></span></a>
+
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+						<a class="dropdown-item" 
+							th:href="@{/locale(lang=es_ES)}"
+							th:text="#{text.locale.es}">ES</a> 
+						<a class="dropdown-item"
+							th:href="@{/locale(lang=en_US)}" 
+							th:text="#{text.locale.en}">EN</a>
+						<a class="dropdown-item" 
+							th:href="@{/locale(lang=de_DE)}"
+							th:text="#{text.locale.de}">DE</a>
+					</div></li>
 			</ul>
 
 		</nav>
