--- a/src/main/resources/templates/paginador.html
+++ b/src/main/resources/templates/paginador.html
@@ -4,14 +4,14 @@
 
 	<ul class="pagination">
 		<li class="page-item" th:class="${page.first? 'page-item disabled': 'page-item'}"><span class="page-link"
-			th:if="${page.first}">Primera</span> <a class="page-link"
+			th:if="${page.first}" th:text="#{text.paginator.first}">Primera</span> <a class="page-link"
 			th:if="${not page.first}" th:href="@{${page.url}(page=0)}">Primera</a></li>
 
 
 		<li class="page-item" th:class="${not page.hasPrevious? 'page-item disabled': 'page-item'}"><span class="page-link"
-			th:if="${not page.hasPrevious}">Anterior</span> <a class="page-link"
+			th:if="${not page.hasPrevious}" th:text="#{text.paginator.previous}">Anterior</span> <a class="page-link"
 			th:if="${page.hasPrevious}"
-			th:href="@{${page.url}(page=${page.paginaActual-2})}">Anterior</a></li>
+			th:href="@{${page.url}(page=${page.paginaActual-2})}" th:text="#{text.paginator.previous}">Anterior</a></li>
 
 
 		<li class="page-item" th:each="item: ${page.paginas}" th:class="${item.actual? 'page-item active': 'page-item'}"><span
@@ -21,11 +21,11 @@
 			th:text="${item.numero}"></a></li>
 
 		<li class="page-item" th:class="${not page.hasNext? 'page-item disabled': 'page-item'}"><span class="page-link"
-			th:if="${not page.hasNext}">Siguiente</span> <a class="page-link"
+			th:if="${not page.hasNext}" th:text="#{text.paginator.next}">Siguiente</span> <a class="page-link"
 			th:if="${page.hasNext}"
-			th:href="@{${page.url}(page=${page.paginaActual})}">Siguiente</a></li>
+			th:href="@{${page.url}(page=${page.paginaActual})}" th:text="#{text.paginator.next}">Siguiente</a></li>
 		<li class="page-item" th:class="${page.isLast? 'page-item disabled': 'page-item'}"><span class="page-link"
-			th:if="${page.isLast}">Ultimo</span> <a class="page-link"
+			th:if="${page.isLast}" th:text="#{text.paginator.last}">Ultimo</span> <a class="page-link"
 			th:if="${not page.last}"
 			th:href="@{${page.url}(page=${page.totalPaginas-1})}">Ultimo</a></li>
 
