--- a/src/main/resources/templates/factura/ver.html
+++ b/src/main/resources/templates/factura/ver.html
@@ -15,7 +15,8 @@
 					<a class="btn btn-primary btn-xs"
 						th:href="@{'/ver/'+${factura.cliente.id}}"
 						th:text="'&laquo; Volver'"></a>
-						<a class="btn btn-danger btn-xs float-right" th:href="@{'/factura/ver/' + ${factura.id}(format=pdf)}">PDF</a>
+						<a class="btn btn-danger btn-xs float-right mx-2" th:href="@{'/factura/ver/' + ${factura.id}(format=pdf)}">PDF</a>
+						<a class="btn btn-success btn-xs float-right" th:href="@{'/factura/ver/' + ${factura.id}(format=xlsx)}">EXCEL</a>
 				</h4>
 				<ul class="list-group my-2">
 					<li th:text="'Datos del Cliente'"
