Creando clase ClienteCsv para exportar info de clientes y el link en la vista

--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -17,6 +17,8 @@
 				<h4 class="card-title">
 					<a sec:authorize="hasRole('ROLE_ADMIN')"  class="btn btn-primary btn-xs" th:href="@{/form}">Crear
 						Cliente</a>
+						
+						<a class="btn btn-success btn-xs float-right" th:href="@{'/listar' (format=csv)}">CSV</a>
 				</h4>
 				<table class="table table-striped">
 
