Añadiendo funcionalidad de exportar listado de clientes a XML

--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -19,6 +19,7 @@
 						Cliente</a>
 						
 						<a class="btn btn-success btn-xs float-right" th:href="@{'/listar' (format=csv)}">CSV</a>
+						<a class="btn btn-outline-success btn-xs float-right mx-2" th:href="@{'/listar' (format=xml)}">XML</a>
 				</h4>
 				<table class="table table-striped">
 
